# avionics-software

./: .gitignore  .releaserc  .releaserc.yaml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  deny.toml  package.json  rustfmt.toml
.cargo/: config.toml
apps/argus/: README.md  pyproject.toml
apps/argus/argus/: dtos.py  main.py
apps/argus/argus/models/: pressure_reading.py  recording_session.py  strain_reading.py  thermocouple_reading.py
apps/argus/argus/services/: argus_service.py  grpc_service.py  message_ingestion_service.py  persistence_service.py  protobuf_serial_service.py  session_service.py
apps/argus/argus/utils/: database.py  logger.py
apps/phil-cart/: .gitignore  README.md  export_to_csv.py  main.py  pyproject.toml  sync_db.py
apps/phil-cart/daq/: main.py  sensors.py  service.py
apps/phil-cart/daq/models/: datapoint.py  sensor.py
apps/phil-cart/utils/: database.py  logger.py
boards/argus/: Cargo.toml  Makefile.toml  build.rs  mono.txt
boards/argus/.cargo/: config.toml
boards/argus/src/: _main.rs  _state_machine.rs  _time_manager.rs  adc_manager.rs  ads.rs  calibration.rs  can_manager.rs  config.rs  data_manager.rs  lib.rs  main.rs  main_rtic.rs  resources.rs  sd.rs  state_machine.rs  time_manager.rs  traits.rs  types.rs
boards/argus/src/adc/: config.rs  mod.rs  service.rs
boards/argus/src/csv/: types.rs
boards/argus/src/led_indicator/: service.rs
boards/argus/src/linear_transformation/: README.md  service.rs  types.rs
boards/argus/src/node/: mod.rs  node.rs
boards/argus/src/pressure/: calibration.rs  config.rs  mod.rs  service.rs
boards/argus/src/sd/: config.rs  mod.rs  service.rs  task.rs  time_source.rs  types.rs
boards/argus/src/serial/: mod.rs  service.rs
boards/argus/src/session/: service.rs
boards/argus/src/state_machine/: config.rs  service.rs  types.rs
boards/argus/src/strain/: config.rs  service.rs
boards/argus/src/temperature/: calibration.rs  config.rs  mod.rs  rtd.rs  service.rs  task.rs  types.rs
boards/argus/src/utils/: hal.rs  mod.rs
boards/argus/tests/: adc.rs  sd.rs  simple.rs
boards/phoenix/: Cargo.toml  build.rs
boards/phoenix/.cargo/: config.toml
boards/phoenix/src/: lib.rs  main.rs
boards/phoenix/src/led_indicator/: mod.rs  service.rs  tasks.rs
boards/phoenix/src/music/: mod.rs  service.rs  songs.rs  tasks.rs  types.rs
boards/phoenix/src/sound/: mod.rs  service.rs  types.rs
boards/phoenix/src/utils/: hal.rs  mod.rs  types.rs
common/csv/: Cargo.toml
common/csv/src/: lib.rs
common/driver-services/: Cargo.toml  README.md
common/driver-services/src/: lib.rs
common/driver-services/src/ejection_channel_driver/: driver.rs  utils.rs
common/driver-services/src/max_m10m_service/: config.rs  mod.rs  service.rs  traits.rs
common/driver-services/src/ms561101/: config.rs  math.rs  mod.rs  service.rs  units.rs
common/driver-services/src/rfd900x/: mod.rs  service.rs
common/driver-services/src/rfd900x_service/: config.rs  data.rs  service.rs
common/drivers/: Cargo.toml
common/drivers/src/: lib.rs
common/drivers/src/ejection_channel/: driver.rs  utils.rs
common/drivers/src/iim20670/: config.rs  driver.rs  math.rs
common/drivers/src/mmc5983ma/: constants.rs  driver.rs  mod.rs  utils.rs
common/drivers/src/ms561101/: checksum_algorithim.py  driver.rs  math.rs  mod.rs
common/drivers/src/rfd900x/: config.rs  driver.rs  macros.rs  mod.rs
common/high-level-services/: Cargo.toml
common/high-level-services/src/: lib.rs
common/high-level-services/src/altimeter_service/: service.rs
common/mavlink_communications/: Cargo.toml  README.md
common/mavlink_communications/src/: lib.rs  macros.rs
common/mavlink_communications/src/publishers/: debug_publisher.rs  heartbeat_publisher.rs  mod.rs  named_value_int_publisher.rs  pressure_sensor_publisher.rs  strain_gauge_publisher.rs  thermocouple_publisher.rs
common/mavlink_communications/src/subscribers/: debug_subscriber.rs  radio_status_subscriber.rs
common/mavlink_communications_macros/: Cargo.toml
common/mavlink_communications_macros/src/: lib.rs  publish_variants.rs  subscribe_variants.rs  variants.rs
common/mavlink_communications_traits/: Cargo.toml
common/mavlink_communications_traits/src/: lib.rs
common/mavlink_communications_traits/src/publish_subscribe_tools/: publisher.rs  subscriber.rs
common/mavlink_dialect/: Cargo.toml  README.md  common.xml
common/mavlink_dialect/src/: lib.rs
common/mavlink_service/: Cargo.toml
common/mavlink_service/src/: data.rs  lib.rs  macros.rs  service.rs  utils.rs
common/messages/: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
common/messages/assets/: pyproject.toml
common/messages/src/: lib.rs
common/messages/utils/: prefix-python-imports.sh
common/peripheral-services/: Cargo.toml
common/peripheral-services/src/: lib.rs
common/rfd900x/: Cargo.toml
common/rfd900x/src/: config.rs  data.rs  lib.rs  macros.rs  service.rs
common/sbg-hal/: Cargo.toml
common/sbg-hal/.cargo/: config.toml
common/sbg-hal/src/: constants.rs  lib.rs  sbg_device.rs  sbg_frame.rs
common/sbg_hal/: Cargo.toml
common/sbg_hal/.cargo/: config.toml
common/sbg_hal/src/: lib.rs  sbg_device.rs  sbg_frame.rs
common/sbg_offboard_testing/: Cargo.toml
common/sbg_test/: Cargo.toml
common/sbg_test/src/: lib.rs  sbg_tester.rs
common/sbg_test/tests/: reading.rs  writing.rs
common/serial/: Cargo.toml  service.rs
common/serial_ring_buffered/: Cargo.toml  service.rs
common/uor-mavlink/: Cargo.toml  README.md
common/uor-mavlink-macros/: Cargo.toml  README.md
common/uor-mavlink-macros/src/: lib.rs  publish_variants.rs  subscribe_variants.rs  utils.rs
common/uor-proc-macros/: Cargo.toml
common/uor-proc-macros/src/: lib.rs
common/uor-utils/: Cargo.toml  build.rs
common/uor-utils/src/: lib.rs
common/utils/: Cargo.toml
common/utils/src/: lib.rs
crates/ads126x/: Cargo.toml  README.md
crates/ads126x/src/: error.rs  lib.rs  register.rs
crates/ads126x/tests/: example.rs
mavlink-ground-station-cli/: Cargo.toml
mavlink-ground-station-cli/src/: main.rs
(+368 files in other folders)
