[workspace]
resolver = "2"

members = ["boards/*", "common/*", "apps/sergw"]

# Specify which members to build by default. Some libraries, such as messages, contain dev-dependencies that will give
# compile errors if built directly.
default-members = ["boards/*"]

[workspace.dependencies.chrono]
git = "https://github.com/uorocketry/chrono"
default-features = false

[workspace.dependencies.cortex-m]
version = "0.7.6"
features = ["critical-section-single-core"]

[workspace.dependencies.prost]
version = "0.14.1"
features = ["derive"]
default-features = false

[workspace.dependencies.cortex-m-rt]
version = "0.7.1"

[workspace.dependencies.defmt]
version = "0.3.2"

[workspace.dependencies.defmt-rtt]
version = "0.4"

[workspace.dependencies.embedded-alloc]
version = "0.6.0"

[workspace.dependencies.embedded-io]
version = "0.6.1"

[workspace.dependencies.embedded-io-async]
version = "0.6.1"


[workspace.dependencies.enum_dispatch]
version = "0.3.11"

[workspace.dependencies.embassy-embedded-hal]
version = "0.3.0"

[workspace.dependencies.embassy-stm32]
version = "0.2.0"

[workspace.dependencies.embassy-time]
version = "0.4.0"

[workspace.dependencies.heapless]
version = "0.9.1"

[workspace.dependencies.messages]
path = "./common/messages"

[workspace.dependencies.peripheral-services]
path = "./common/peripheral-services"

[workspace.dependencies.utils]
path = "./common/utils"

[workspace.dependencies.driver-services]
path = "./common/driver-services"

[workspace.dependencies.uor-mavlink]
path = "./common/uor-mavlink"

[workspace.dependencies.uor-mavlink-macros]
path = "./common/uor-mavlink-macros"

[workspace.dependencies.nb]
version = "1.1.0"
default-features = false

[workspace.dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]

[workspace.dependencies.serde]
version = "1.0.150"
default-features = false
features = ["derive"]

[workspace.dependencies.serde-csv-core]
version = "0.3.2"
features = ["defmt"]

[workspace.dependencies.smlang]
version = "0.8.0"
