[workspace]
resolver = "2"

members = ["apps/sergw", "boards/*", "common/*"]

# Specify which members to build by default. Some libraries, such as messages, contain dev-dependencies that will give
# compile errors if built directly.
default-members = ["boards/*"]

# Here we put together any dependencies and options that are used basically everywhere, and allow for more consistency between packages, and a smoother dependency upgrade experience
# Only minimal feature flags are enabled here, due to the additive nature of inheriting workspace dependencies (can only add feature flags when inheriting, not remove any)

[workspace.package]
version = "1.0.1"
authors = ["UORocketry Avionics Members"]
publish = false
license = "GPL-3.0-or-later"

[workspace.dependencies]
bitflags = { version = "2.10.0", default-features = false }
chrono = { git = "https://github.com/uorocketry/chrono", default-features = false }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
critical-section = "1.1"
defmt = "0.3.2"
defmt-rtt = "0.4"
driver-services = { path = "./common/driver-services" }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = ["defmt"] }
embassy-stm32 = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embedded-alloc = "0.6.0"
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
enum_dispatch = "0.3.11"
heapless = "0.9.1"
high-level-services = { path = "./common/high-level-services" }
uor-utils = { path = "./common/uor-utils" }
uor-proc-macros = { path = "./common/uor-proc-macros" }

nb = "1.1.0"
num-traits = { version = "0.2.19", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
peripheral-services = { path = "./common/peripheral-services" }
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.150", features = ["derive"], default-features = false }
serde-csv-core = { version = "0.3.2", features = ["defmt"] }
smlang = "0.8.0"
