[package]
name = "mavlink-ground-station-cli"
edition = "2024"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
mavlink = { workspace = true, features = ["std"] }
tokio = { version = "1.49.0", features = ["full"] }
serial2-tokio = "0.1.19"
socket2 = { version = "0.6.1" }
