[package]
name = "argus"
version = "0.1.0"
edition = "2021"

[features]
pressure = []
temperature = []
strain = []
calibration = []

[[bin]]
name = "argus"
path = "src/main.rs"
harness = false

[[test]]
name = "sd"
harness = false
path = "tests/sd.rs"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
embedded-alloc = { workspace = true }
heapless = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }
chrono = { workspace = true }
enum_dispatch = { workspace = true }
smlang = { workspace = true }
libm = { version = "0.2.15", default-features = false }
messages-prost = { workspace = true }
embassy-stm32 = { version = "0.2.0", features = [
	"defmt",
	"stm32h733vg",
	"time-driver-tim2",
	"exti",
	"memory-x",
	"unstable-pac",
	"chrono",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-embedded-hal = { version = "0.3.0" }
embassy-executor = { version = "0.7.0", features = [
	"nightly",
	"task-arena-size-10240",
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
	"defmt",
] }
embassy-time = { version = "0.4.0", features = [
	"defmt",
	"defmt-timestamp-uptime",
	"tick-hz-32_768",
] }
embassy-net = { version = "0.7.0", features = [
	"defmt",
	"tcp",
	"dhcpv4",
	"medium-ethernet",
	"proto-ipv6",
	"dns",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embedded-hal-bus = { version = "0.3.0", features = ["async", "defmt-03"] }
embedded-sdmmc = "0.9.0"
embedded-hal-async = { version = "1.0" }
embedded-nal-async = "0.8.0"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.3.0"
embedded-storage = "0.3.1"
static_cell = "2"
grounded = "0.2.0"
pid = "4.0.0"
thermocouple-converter = { path = "../../crates/thermocouple-converter" }
straingauge-converter = { path = "../../crates/straingauge-converter" }
itoa = { version = "1.0.15", features = ["no-panic"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
serde-csv-core = { version = "0.3.2", features = ["defmt"] }
serde = { workspace = true, features = ["derive", "serde_derive"] }

[dev-dependencies]
defmt-test = { workspace = true }
