[package]
name = "argus"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[features]
pressure = []
temperature = []
strain = []

[dependencies]
chrono = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
critical-section = "1.1"
defmt = { workspace = true }
defmt-rtt = { workspace = true }
derive_more = { version = "2.0.1", default-features = false, features = [
	"full",
] }
embassy-embedded-hal = { version = "0.3.0" }
embassy-executor = { version = "0.7.0", features = [
	"nightly",
	"task-arena-size-10240",
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
	"defmt",
] }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.7.0", features = [
	"defmt",
	"tcp",
	"dhcpv4",
	"medium-ethernet",
	"proto-ipv6",
	"dns",
] }
embassy-stm32 = { version = "0.2.0", features = [
	"defmt",
	"stm32h733vg",
	"time-driver-tim2",
	"exti",
	"memory-x",
	"unstable-pac",
	"chrono",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
	"defmt",
	"defmt-timestamp-uptime",
	"tick-hz-32_768",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embedded-alloc = { workspace = true }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.3.0", features = ["async", "defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-nal-async = "0.8.0"
embedded-sdmmc = { version = "0.9.0", default-features = false, features = [
	"defmt-log",
] }
embedded-storage = "0.3.1"
embedded-test = { version = "0.6.2", features = ["defmt", "embassy"] }
enum_dispatch = { workspace = true }
grounded = "0.2.0"
heapless = { workspace = true }
itoa = { version = "1.0.15", features = ["no-panic"] }
libm = { version = "0.2.15", default-features = false }
messages-prost = { workspace = true }
micromath = "2.0.0"
panic-probe = { workspace = true }
pid = "4.0.0"
serde = { workspace = true, features = ["derive", "serde_derive"] }
serde-csv-core = { version = "0.3.2", features = ["defmt"] }
smlang = { workspace = true }
static_cell = "2"
stm32-fmc = "0.3.0"
straingauge-converter = { path = "../../common/straingauge-converter" }
thermocouple-converter = { path = "../../common/thermocouple-converter" }

[[test]]
name = "sd"
harness = false
path = "tests/sd.rs"
