[package]
name = "argus"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lib]
harness = false

[features]
pressure = []
temperature = []
strain = []

#TODO: Fix this
calibration = []
[dependencies]
chrono = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
critical-section = { workspace = true }
csv = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
derive_more = { version = "2.0.1", default-features = false, features = [
	"full",
] }
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true, features = [
	"nightly",
	"task-arena-size-10240",
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
] }
embassy-futures = { workspace = true }
embassy-net = { workspace = true, features = [
	"tcp",
	"dhcpv4",
	"medium-ethernet",
	"proto-ipv6",
	"dns",
] }
embassy-stm32 = { workspace = true, features = [
	"stm32h733vg",
	"time-driver-tim2",
	"exti",
	"memory-x",
	"unstable-pac",
	"chrono",
] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["tick-hz-32_768"] }
embassy-usb = { workspace = true }
embedded-alloc = { workspace = true }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.3.0", features = ["async", "defmt-03"] }
embedded-io-async = { workspace = true, features = ["defmt-03"] }
embedded-nal-async = "0.8.0"
embedded-sdmmc = { version = "0.9.0", default-features = false, features = [
	"defmt-log",
] }
embedded-storage = "0.3.1"
embedded-test = { version = "0.6.2", features = ["defmt", "embassy"] }
enum_dispatch = { workspace = true }
grounded = "0.2.0"
heapless = { workspace = true }
itoa = { version = "1.0.15", features = ["no-panic"] }
libm = { version = "0.2.15", default-features = false }
messages = { workspace = true }
micromath = "2.0.0"
num-traits = { workspace = true, features = ["libm"] }
panic-probe = { workspace = true }
peripheral-services.workspace = true
pid = "4.0.0"
prost = { workspace = true }
serde = { workspace = true, features = ["derive", "serde_derive"] }
smlang = { workspace = true }
static_cell = { workspace = true }
stm32-fmc = "0.3.0"
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
utils = { workspace = true }

[[test]]
name = "sd"
harness = false
path = "tests/sd.rs"
