[package]
name = "phoenix"
edition = "2024"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lib]
harness = false

[features]
default = ["music", "altitude"]
music = []
altitude = []

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true, features = [
	"nightly",
	"task-arena-size-10240",
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
] }
embassy-stm32 = { workspace = true, features = [
	"stm32h733vg",
	"time-driver-tim2",
	"exti",
	"memory-x",
	"unstable-pac",
	"chrono",

] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["tick-hz-32_768"] }
embedded-alloc = { workspace = true }
panic-probe = { workspace = true }
static_cell = { workspace = true }
uor-drivers = { workspace = true }
uor-high-level = { workspace = true }
uor-peripherals = { workspace = true }
uor-utils = { workspace = true }
