[package]
name = "csv"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true
license-file.workspace = true
edition = "2024"

[lib]
path = "src/lib.rs"
harness = false

[dependencies]
serde = { workspace = true, features = ["derive", "serde_derive"] }
serde-csv-core = { workspace = true }
heapless = { workspace = true }
defmt = { workspace = true }

