[package]
name = "driver-services"
edition = "2024"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
defmt = { workspace = true }

embassy-time = { workspace = true, features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embedded-io-async = { workspace = true, features = ["defmt-03"] }
heapless = { workspace = true }
messages = { workspace = true }
peripheral-services = { workspace = true }
utils = { workspace = true }
