[package]
name = "driver-services"
edition = "2024"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
defmt = { workspace = true }
embassy-executor = { workspace = true }
embassy-stm32 = { workspace = true, features = [
    "defmt",
    "stm32h733vg",
    "time-driver-tim2",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-time = { workspace = true, features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embedded-io-async = { workspace = true, features = ["defmt-03"] }
heapless = { workspace = true }
peripheral-services = { workspace = true }

ublox = { version = "0.9.0", features = [
    "serde",
    "ubx_proto31",
], default-features = false }
uor-utils = { workspace = true }
