[package]
name = "mavlink_communications_macros"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0.15", features = ["full", "visit", "parsing"] }
quote = "1.0.9"
darling = "0.20.1"
proc-macro2 = "1.0.29"
mavlink_communications_traits = { workspace = true, features = [
    "publish_subscribe",
] }

[lib]
proc-macro = true
