[package]
name = "mavlink_communications_traits"
version = "0.1.0"
edition = "2024"

[dependencies]
mavlink = { features = ["common", "embedded"], workspace = true }
embedded-io-async = { version = "0.6.1" }
embassy-time = { version = "0.4.0", optional = true }

[features]
delayed = ["dep:embassy-time"]
publish_subscribe = []

default = ["delayed", "publish_subscribe"]
