[package]
name = "mavlink"
version = "0.1.0"
edition = "2024"

# This will be used if the code generation is automated, see: https://github.com/mavlink/rust-mavlink/tree/master/mavlink-bindgen
[build-dependencies]
mavlink-bindgen = { version = "=0.16.2", default-features = false }


[dependencies]
bitflags = "2.10.0"
mavlink-core = { version = "0.16.2", default-features = false }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
serde = { version = "1.0.115", optional = true, features = ["derive"] }
serde_arrays = { version = "0.2.0", optional = true }
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
rand = { version = "0.9", optional = true, default-features = false, features = [
    "std",
    "std_rng",
] }
ts-rs = { version = "11.0.1", optional = true }

embedded-io.workspace = true
embedded-io-async.workspace = true


[features]
default = ["common", "uorocketry"]
uorocketry = []
common = []
embedded = ["mavlink-core/embedded"]
serde = [
    "bitflags/serde",
    "dep:serde",
    "dep:serde_arrays",
    "mavlink-core/serde",
]
arbitrary = [
    "dep:arbitrary",
    "dep:rand",
    "mavlink-bindgen/arbitrary",
    "mavlink-core/arbitrary",
    "bitflags/arbitrary",
]

ts = []
standard = []
minimal = []
