[package]
name = "mavlink_service"
version = "0.1.0"
edition = "2024"


[dependencies]
mavlink = { features = ["common", "embedded"], workspace = true }

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embassy-executor = { version = "0.7.0", features = [
    "nightly",
    "task-arena-size-10240",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
utils = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
