[package]
name = "messages"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["mavlink/embedded", "mavlink/uorocketry"]
std = [
    "mavlink/std",
    "mavlink/tcp",
    "mavlink/udp",
    "mavlink/direct-serial",
    "mavlink/serde",
]

[dependencies]
bitflags = { version = "2.3.1", default-features = false, features = ["serde"] }
defmt = { workspace = true }
heapless = { workspace = true }
mavlink = { git = "https://github.com/uorocketry/rust-mavlink.git", features = [
  "uorocketry",
], default-features = false }
prost = { workspace = true }
serde = { workspace = true }
ublox = { git = "https://github.com/uorocketry/ublox", default-features = false, features = [
  "serde",
] }

[build-dependencies]
glob = "0.3.3"
prost-build = "0.14.1"
protoc-bin-vendored = "3"
