[package]
name = "peripheral-services"
version = "0.1.0"
edition = "2024"

[features]
messages = ["prost", "uor-utils/messages"]

[dependencies]

defmt = { workspace = true }

embassy-embedded-hal = { workspace = true }
embassy-stm32 = { workspace = true, features = [
    "defmt",
    "stm32h733vg",
    "time-driver-tim2",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-time = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true, features = ["defmt-03"] }
heapless = { workspace = true }
prost = { workspace = true, optional = true }

uor-utils = { workspace = true }
