[package]
name = "peripheral-services"
edition = "2024"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]

defmt = { workspace = true }

embassy-embedded-hal = { workspace = true }
embassy-stm32 = { workspace = true, features = [
    "defmt",
    "stm32h733vg",
    "time-driver-tim2",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-time = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true, features = ["defmt-03"] }

heapless = { workspace = true }
messages = { workspace = true }
prost = { workspace = true }
utils = { workspace = true }
