[package]
name = "rfd900x"
version = "0.1.0"
edition = "2024"

[dependencies]

embedded-io-async = { workspace = true, features = ["defmt-03"] }

embassy-time = { workspace = true, features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
heapless = { workspace = true }
defmt = { workspace = true }
messages = { workspace = true }
utils = { workspace = true }
peripheral-services = { workspace = true }
