[package]
name = "sbg_offboard_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
devtimer = "4.0.1"
colored = "3.0.0"


tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-macros = { version = "2.6.0" }
sbg_hal = { path = "../sbg-hal" }


[[test]]
name = "reading_validation"
path = "tests/optimization/reading_validation.rs"

[[test]]
name = "reading_fails"
path = "tests/optimization/reading_fails.rs"

[[test]]
name = "reading_speed"
path = "tests/optimization/reading_speed.rs"

[[test]]
name = "reading_speed_by_id"
path = "tests/optimization/reading_speed_by_id.rs"
