[package]
name = "sbg_test"
version = "0.1.0"
edition = "2024"

[dependencies]
sbg_hal = { path = "../sbg_hal" }
embedded-io-async = "0.6.1"
tokio = {version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"]}
tokio-macros = "2.6.0"
bytemuck = {version = "1.24.0", features = ["derive"]}
crc = "3.3.0"

