[package]
name = "uor-mavlink-macros"
edition = "2024"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.1"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "2.0.15", features = ["full", "visit", "parsing"] }
